# tauri-react

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  README.md  biome.json  bun.lockb  components.json  eslint.config.js  package.json  rsbuild.config.ts  tsconfig.json
.agents/no-use-effect/: SKILL.md
.factory/: init.sh  services.yaml
.factory/skills/window-controls-worker/: SKILL.md
.factory/skills/window-lifecycle-worker/: SKILL.md
.factory/validation/window-lifecycle-core/scrutiny/: synthesis.json
.factory/validation/window-lifecycle-core/scrutiny/reviews/: bootstrap-shell-gating-hardening.json  homepage-effect-window-routing.json  lifecycle-foundation.json  lifecycle-identity-and-close-accounting-hardening.json  renderer-role-and-control-binding.json  typed-prewarm-discard-commands.json  validation-surface-launch-stabilization.json  window-close-accounting.json
.factory/validation/window-lifecycle-core/user-testing/: synthesis.json
.factory/validation/window-lifecycle-core/user-testing/flows/: desktop-launch-blocked.json
.factory/validation/window-lifecycle-hardening/scrutiny/: synthesis.json
.factory/validation/window-lifecycle-hardening/scrutiny/reviews/: window-control-ownership-regressions.json  window-control-reopen-freshness-regressions.json
.factory/validation/window-lifecycle-hardening/user-testing/: synthesis.json
.github/workflows/: quality-gates.yml  react-doctor.yml  release.yml
.tmp/fn013/package/: LICENSE  README.md  package.json
.tmp/fn018/package/: README.md  package.json
components/ui/: dropdown-menu.tsx
lib/: comb.ts  e.ts  matchable.ts  result.ts  utils.ts
scripts/: build-bun-runtime.mjs
sidecar-bun/: hello.ts  package.json
src/: App.css  App.tsx  commandAdapter.ts  commands.ts  index.tsx  topbar.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/crates/app-database/: Cargo.toml
src-tauri/crates/app-database/src/: error.rs  lib.rs
src-tauri/crates/app-database/src/database/: auth.rs  core.rs  crud.rs  error.rs  graph.rs  meta.rs  mod.rs  query.rs  repo.rs  sql.rs  tx.rs
src-tauri/crates/app-database/src/database/enums/: meta.rs  mod.rs  table.rs
src-tauri/crates/app-database/src/graph/: mod.rs
src-tauri/crates/app-database/src/model/: relation.rs  schema.rs
src-tauri/crates/app-database/src/query/: builder.rs  mod.rs  sql.rs
src-tauri/crates/app-database/src/repository/: mod.rs
src-tauri/crates/app-database/src/serde_utils/: id.rs
src-tauri/crates/app-database/src/tx/: mod.rs
src-tauri/crates/app-database/tests/: integration_db.rs
src-tauri/crates/appdb/: Cargo.toml
src-tauri/crates/appdb-macros/: Cargo.toml
src-tauri/crates/appdb-macros/src/: lib.rs
src-tauri/crates/appdb/src/: crypto.rs  lib.rs
src-tauri/crates/appdb/src/auth/: mod.rs
src-tauri/crates/appdb/src/connection/: mod.rs
src-tauri/crates/appdb/src/graph/: mod.rs
src-tauri/crates/appdb/src/model/: meta.rs  mod.rs
src-tauri/crates/appdb/src/query/: builder.rs
src-tauri/crates/appdb/src/repository/: mod.rs
src-tauri/crates/appdb/src/serde_utils/: id.rs
src-tauri/crates/appdb/src/tx/: mod.rs
src-tauri/crates/appdb/tests/: integration_db.rs  sensitive_compile.rs  sensitive_roundtrip.rs
src-tauri/crates/appdb/tests/ui/sensitive/: no_secure_fields.rs  no_secure_fields.stderr  unsupported_secure_type.rs  unsupported_secure_type.stderr
src-tauri/src/: commands.header.ts  lib.rs
src-tauri/src/database/: auth.rs  core.rs  crud.rs  error.rs  mod.rs  query.rs  schema.rs  sql.rs
src-tauri/src/database/enums/: table.rs
src-tauri/src/domain/: mod.rs  relations.rs  template.rs
src-tauri/src/domain/enums/: mod.rs  sql.rs
src-tauri/src/domain/models/: member.rs  mod.rs  task.rs  user.rs
src-tauri/src/domain/template/: command.rs  input.rs  service.rs
src-tauri/src/utils/: core.rs  event.rs  file.rs  macos_titlebar.rs  mod.rs  serialize.rs  sidecar.rs  window.rs
src/assets/: icons.tsx
src/cmd/: commandAdapter.ts  commands.ts  index.ts  templateApp.ts
src/components/: Input.tsx
src/components/scrollbar/: barObserver.ts  index.ts  scrollbar.tsx
src/flow/: barVisible.ts  centertool.ts  state.ts  windowFocus.ts  windowMaximized.ts
src/flow/appLogic/: core.ts  events.ts  index.ts  machine.ts  src.ts
src/flow/bootstrap/: index.ts  logic.ts
src/flow/kit/: index.ts
src/flow/kit/compose/: ns.ts
src/flow/kit/core/: signal.ts  sst.ts  types.ts
src/flow/kit/xstate/: actors.ts  events.ts  invoke.ts
src/flow/template/: README.md  api.ts  core.ts  events.ts  index.ts  machine.ts  src.ts
src/flow/template/submachine/: example.ts
src/flow/template_board/: api.ts  core.ts  events.ts  logic.ts  machine.ts  selectors.ts  src.ts
src/flow/templete/: core.ts  index.ts  machine.ts  src.ts
src/flow/updater/: api.ts  events.ts  index.ts  machine.ts  src.ts
src/state_machine/: barVisible.ts  centertool.ts  core.ts  state.ts  windowFocus.ts
src/state_machine/kit/: index.ts
src/state_machine/kit/compose/: ns.ts
src/state_machine/kit/core/: signal.ts  sst.ts  types.ts
src/state_machine/kit/xstate/: actors.ts  events.ts
src/state_machine/template_board/: core.ts  events.ts  index.ts  machine.ts
src/state_machine/templete/: api.ts  events.ts  index.ts  machine.ts  src.ts  state.ts  utils.ts
src/state_machine/templete/submachine/: example.ts
src/state_machine/updater/: api.ts  events.ts  machine.ts  src.ts
src/subpub/: buses.ts  core.ts  type.ts
src/utils/: commandAdapter.ts  commands.ts
src/windowctrl/: macos.tsx  portal.ts  windows.tsx
tests/: bootstrap.logic.test.ts  template_board.events.test.ts  template_board.logic.test.ts  template_board.prewarm.logic.test.ts  template_board.selectors.test.ts  window_ownership.logic.test.ts
