[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.89.0"

[workspace]
members = ["crates/appdb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = [ "macos-private-api", "protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-shell = "2"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
rspc = "0.4.1"
specta = "2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-os = "2"
surrealdb = { version = "3.0.1", features = ["kv-surrealkv"] }
surrealdb-types = "3.0.1"
appdb = { path = "crates/appdb" }
anyhow = "1.0.95"
async-trait = "0.1.85"
once_cell = "1.20.2"
futures = "0.3.31"
thiserror = "2.0.11"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
inventory = "0.3.20"
windows = "0.61.3"
webview2-com = "0.38.0"
tauri-plugin-process = "2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.1"
objc2 = "0.6.1"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
surrealkv = { git = "https://github.com/lukas-hradecky/surrealkv.git", rev = "fa032486d260ca6dbe111a7cca274ee6e7671cc4" }
