[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.89.0"

[workspace]
members = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-shell = "2"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
specta = "2.0.0-rc.23"
specta-typescript = "0.0.10"
tauri-specta = { git = "https://github.com/specta-rs/tauri-specta.git", rev = "b7cd99b786bd437acdbf2c11ae3e2c955b611a51", features = [
  "derive",
  "typescript",
] }
tauri-plugin-os = "2"
appdb = "0.1.7"
anyhow = "1.0.102"
async-trait = "0.1.89"
inventory = "0.3.22"
surrealdb = { version = "3.0.4", features = ["kv-surrealkv"] }
surrealdb-types = "3.0.4"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
windows = "0.62.2"
webview2-com = "0.38.2"
tauri-plugin-process = "2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
