[package]
name = "app-database"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_database"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
inventory = "0.3.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = "2.0.0-rc.22"
surrealdb = { version = "3.0.1", features = ["kv-surrealkv"] }
surrealdb-types = "3.0.1"
sysinfo = "0.37.2"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "sync"] }
