[package]
name = "appdb"
version = "0.1.0"
edition = "2021"

[lib]
name = "appdb"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
inventory = "0.3.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = { version = "2.0.0-rc.23", features = ["derive"] }
surrealdb = { version = "3.0.2", features = ["kv-surrealkv"] }
surrealdb-types = "3.0.2"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync"] }
