[package]
name = "appdb"
version = "0.1.0"
edition = "2021"

[lib]
name = "appdb"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.102"
appdb-macros = { path = "../appdb-macros" }
async-trait = "0.1.89"
inventory = "0.3.22"
keyring = "3.6.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = { version = "2.0.0-rc.23", features = ["derive"] }
surrealdb = { version = "3.0.2", features = ["kv-surrealkv"] }
surrealdb-types = "3.0.2"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync"] }
trybuild = "1.0.112"

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = ["Win32_Security_Cryptography", "Win32_System_Memory"] }
